# bytewirez

./: .gitignore  README.md  __init__.py  bytewirez.py  pyproject.toml  view.html
.github/workflows/: publish.yml
examples/: example_read.py  example_struct.py  example_write.py
src/bytewirez/: __init__.py  bytewirez.py
tests/: test_wire_sequential.py
